formularios y copias de primera tienda

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      𝐃𝐈𝐆𝐈𝐆𝐀𝐌𝐄𝐒
+      DIGIGAMES
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,6 +14,6 @@
   </ion-header>
 
   <div id="container">
-    <ion-button routerLink="/registro">Iniciar Sesión</ion-button>
+    <ion-button routerLink="/registro">Comenzar</ion-button>
   </div>
 </ion-content>
