agregar pagina de perfil e integracion del menu

--- a/src/app/pages/catalogo/catalogo.page.html
+++ b/src/app/pages/catalogo/catalogo.page.html
@@ -1,11 +1,38 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>  
+  <ion-toolbar color="warning">  
           <ion-buttons slot="start">
             <ion-menu-button></ion-menu-button>
           </ion-buttons>
     <ion-title>Catalogo</ion-title>
   </ion-toolbar>
 </ion-header>
+
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar color="warning">
+      <ion-title>Menu DIGIGAMES </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <br />
+  <ion-menu-toggle>
+  <ion-item detail="true" [routerLink]="['/perfil']">
+      <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>Tu Perfil</ion-label>
+  </ion-item>
+</ion-menu-toggle>
+  <ion-content class="ion-padding">Contenido.</ion-content>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button>hola</ion-menu-button>
+      </ion-buttons>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+</div>
 
 
 
@@ -17,7 +44,7 @@
     <ion-img class="card-imagen" alt="#" src="assets/img/black myth.jpg" />
     <ion-card-header>
       <ion-card-title>Black Myth: Wukong</ion-card-title>
-      <ion-card-subtitle>19,999</ion-card-subtitle>
+      <ion-card-subtitle>20,999</ion-card-subtitle>
       
     </ion-card-header>
     <ion-button>Comprar</ion-button>
