integracion de logos y modificaciones

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,19 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      DIGIGAMES
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" color="dark">
+  
 
   <div id="container">
-    <ion-button routerLink="/registro">Comenzar</ion-button>
+    <img src="assets/img/logo1.png" alt="Logo DIGIGAMES" style="height: 120px; vertical-align: middle;">
+    <ion-button routerLink="/login" color="warning">Comenzar</ion-button>
   </div>
 </ion-content>
