--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -1,15 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Registrate</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-
+<ion-content [fullscreen]="true" color="dark">
 <div id="container">
-  <ion-card>
+  <img src="assets/img/logo1.png" alt="Logo DIGIGAMES" style="height: 120px; vertical-align: middle;">
+  <ion-card color="warning">
     <br />
-    <ion-title>Registrate en DIGIGAMES</ion-title>
+    <ion-title>
+      Registrate en DIGIGAMES</ion-title>
     <br />
     <ion-input label="Nombre de usuario" label-placement="floating" fill="outline" placeholder="Elige un nombre bonito"></ion-input>
     <br />
