--- a/src/app/pages/catalogo/catalogo.page.scss
+++ b/src/app/pages/catalogo/catalogo.page.scss
@@ -33,12 +33,18 @@
     padding: 10px 0;
   }
 
-  .card-imagen{
-    width: 100% auto;
-    height: 200px;
-    object-fit: contain;
-}
+  
+  //.card-imagen{
+    //width: 100% auto;
+    //height: 200px;
+    //object-fit: contain;
+//}
+
 
   ion-icon{
     font-size: 30px;
+  }
+
+  ion-header{
+    text-align: center;
   }
