--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,4 @@
+
 #container {
   text-align: center;
 
@@ -26,5 +27,8 @@
   text-decoration: none;
 }
 
-
+p{
+  text-align: center;
+  color: #ffd900;
+}
 
