agregar pagina not found

--- a/src/app/pages/catalogo/catalogo.page.html
+++ b/src/app/pages/catalogo/catalogo.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="warning">  
           <ion-buttons slot="start">
-            <ion-button [routerLink]="'/home'"><mat-icon>home</mat-icon></ion-button>
+            <ion-button [routerLink]="'/login'" (click)="presentAlert()"><mat-icon>logout</mat-icon></ion-button>
           </ion-buttons>
     <ion-title>
       <img src="assets/img/logo1-negro.png" alt="Logo DIGIGAMES" style="height: 55px; margin-right: 50px;">
@@ -58,7 +58,7 @@
       <ion-card-subtitle>39.999</ion-card-subtitle>
       
     </ion-card-header>
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()" >Comprar</ion-button>
       <div class="icon-container">
         <ion-card-title>Disponible en:</ion-card-title>
         <ion-icon name="logo-steam"></ion-icon>
@@ -75,7 +75,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()" >Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -90,7 +90,7 @@
       <ion-card-subtitle>64.000</ion-card-subtitle>
     </ion-card-header>
   
-    <ion-button>Pre-Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Pre-Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -106,7 +106,7 @@
       <ion-card-subtitle>13.500</ion-card-subtitle>
     </ion-card-header>
   
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -123,7 +123,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -140,7 +140,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -159,7 +159,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -176,7 +176,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -194,7 +194,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
@@ -211,7 +211,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+    <ion-button (click)="presentAnotherAlert()">Comprar</ion-button>
     <div class="icon-container">
       <ion-card-title>Disponible en:</ion-card-title>
       <ion-icon name="logo-steam"></ion-icon>
