--- a/src/app/pages/preguntas/preguntas.page.html
+++ b/src/app/pages/preguntas/preguntas.page.html
@@ -31,7 +31,7 @@
     <h3>¿Realize mi compra, donde me llegará?</h3>
     <p>
       Tu compra te llegará a tu correo registrado con nosotros, con la respectiva orden de 
-      compra y tu precio final, ten en cuenta que a partir de tu compra DIGIGAMES dispondra un
+      compra y tu precio final. Ten en cuenta que a partir de tu compra DIGIGAMES dispondra un
       maximo de dos horas para poder hacertelo llegar, de lo contrario, ponte en contacto con nosotros. 
     </p>
 
