--- a/src/app/pages/notfound/notfound.page.scss
+++ b/src/app/pages/notfound/notfound.page.scss
@@ -17,20 +17,12 @@
     font-size: 16px;
     line-height: 22px;
   
-    color: #8c8c8c;
+    color: #ffd900;
   
     margin: 0;
   }
   
   #container a {
     text-decoration: none;
-  }
-  
-  ion-icon{
-    font-size: 10rem;
-  }
-
-  ion-header{
-    text-align: center;
   }
 
