--- a/src/app/pages/carrito/carrito.page.html
+++ b/src/app/pages/carrito/carrito.page.html
@@ -16,3 +16,11 @@
     <ion-icon name="game-controller-outline"></ion-icon>
   </div>
 </ion-content>
+
+<ion-footer translucent="true">
+  <ion-tab-bar color="warning" slot="bottom">
+    <ion-title>
+      <img src="assets/img/logo1-negro.png" alt="Logo DIGIGAMES" style="height: 50px;">
+      </ion-title>
+  </ion-tab-bar>
+</ion-footer>
