cambios finales, vista roles y restringir formulario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item color="warning" detail="true" [routerLink]="['/login']" (click)="presentAlert()">
+          <ion-item color="warning" detail="true" [routerLink]="['/home']" (click)="presentAlert()">
             <mat-icon>logout</mat-icon>
             <ion-label>Salir</ion-label>
           </ion-item>
