--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,6 @@
 
   <div id="container">
     <img src="assets/img/logo1.png" alt="Logo DIGIGAMES" style="height: 120px; vertical-align: middle;">
-    <ion-button routerLink="/login" color="warning" (click)="presentAlert()">Comenzar</ion-button>
+    <ion-button routerLink="/vistarol" color="warning" (click)="presentAlert()">Comenzar</ion-button>
   </div>
 </ion-content>
