cambios a redirecciones y scss

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,8 +5,11 @@
 
 <p>Version 1.0.0</p>  
 
+    <div id="container1">
+      <img src="assets/img/logo1.png" alt="Logo DIGIGAMES" style="height: 120px;">
+    </div>
+
   <div id="container">
-    <img src="assets/img/logo1.png" alt="Logo DIGIGAMES" style="height: 120px; vertical-align: middle;">
     <ion-button routerLink="/vistarol" color="warning" (click)="presentAlert()">Comenzar</ion-button>
   </div>
 </ion-content>
