--- a/src/app/pages/vistaadmin/vistaadmin.page.html
+++ b/src/app/pages/vistaadmin/vistaadmin.page.html
@@ -20,7 +20,6 @@
       <ion-card-subtitle>39.999</ion-card-subtitle>
       
     </ion-card-header>
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
       <div class="icon-container">
@@ -39,7 +38,6 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -56,7 +54,6 @@
       <ion-card-subtitle>64.000</ion-card-subtitle>
     </ion-card-header>
   
-    <ion-button>Pre-Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -74,7 +71,6 @@
       <ion-card-subtitle>13.500</ion-card-subtitle>
     </ion-card-header>
   
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -93,7 +89,6 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -112,7 +107,6 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -133,7 +127,6 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -152,7 +145,6 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -172,7 +164,6 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -191,7 +182,7 @@
     </ion-card-header>
   
     
-    <ion-button>Comprar</ion-button>
+
     <ion-button color="success">Editar</ion-button>
     <ion-button color="danger">Eliminar</ion-button>
     <div class="icon-container">
@@ -220,7 +211,7 @@
         <mat-icon>shopping_cart</mat-icon>
         Carrito
       </ion-tab-button>
-      <ion-tab-button tab="library" [routerLink]="['/#']">
+      <ion-tab-button tab="library">
       <ion-icon name="duplicate-outline"></ion-icon>
       Agregar Juegos
       </ion-tab-button>
