--- a/src/app/pages/vistarol/vistarol.page.html
+++ b/src/app/pages/vistarol/vistarol.page.html
@@ -2,8 +2,15 @@
 <ion-content [fullscreen]="true" color="dark">
   <p>Bienvenido a la seleccion de vistas! </p>
   <p>Version 1.0.0</p>
+
+    <div id="container1">
+        <img src="assets/img/logo1.png" alt="Logo DIGIGAMES" style="height: 120px;">
+    </div>
   <div id="container">
-    <ion-button [routerLink]="'/vistaadmin'" color="danger">Vista Administrador</ion-button>
+    
+    <ion-button [routerLink]="'/vistaadmin'" color="danger">Vista Admin.</ion-button>
     <ion-button [routerLink]="'/login'" color="warning">Vista Usuario</ion-button>
-</div>
+    
+
+  </div>
 </ion-content>
