--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -9,6 +9,19 @@
   transform: translateY(-50%);
 }
 
+
+#container1 {
+  text-align: center;
+
+  
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 40%;
+  transform: translateY(-50%);
+}
+
+
 #container strong {
   font-size: 20px;
   line-height: 26px;
