--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -17,6 +17,10 @@
     [counter]="true"
     maxlength="8" [(ngModel)]="contrasena"></ion-input>
     <br />
+    <ion-input type="password" label="Confirmar Contraseña" label-placement="floating" fill="outline" placeholder="Ingresa tu contraseña"
+    [counter]="true"
+    maxlength="8" [(ngModel)]="confirmarContrasena"></ion-input>
+    <br />
     <ion-button (click)="ingresoUsuarios()">REGISTRAR</ion-button>
 
     <ion-label>
