--- a/src/app/pages/vistaadmin/vistaadmin.page.html
+++ b/src/app/pages/vistaadmin/vistaadmin.page.html
@@ -204,8 +204,8 @@
     
     <ion-tab-bar color="warning" slot="bottom">
       <ion-tab-button tab="home" [routerLink]="['/perfil']" >
-        <ion-icon name="person-circle-outline"></ion-icon>
-        Tu Perfil
+        <mat-icon>admin_panel_settings</mat-icon>
+        Tu Perfil administrativo
       </ion-tab-button>
       <ion-tab-button tab="library" [routerLink]="['/carrito']">
         <mat-icon>shopping_cart</mat-icon>
